--- a/styles/styles.css
+++ b/styles/styles.css
@@ -109,3 +109,72 @@ body {
    cursor: pointer;
    background: #575757;
 }
+/*Вопрос по целесообразности применения padding,а не margin*/
+.car {
+   padding: 100px 0;
+}
+
+.sub-title {
+   font-weight: bold;
+   font-size: 60px;
+   line-height: 70px;
+   color: #030305;
+}
+
+.car-items {
+   display: flex;
+   flex-wrap: wrap;
+   justify-content: space-between;
+   align-items: center;
+   /*margin-top: 110px;*/
+}
+
+.car-item {
+   max-width: 384px;
+   text-align: center;
+   margin-top: 40px;
+}
+
+.car-item-image {
+   vertical-align: bottom;
+}
+
+.car-item-title {
+   font-weight: bold;
+   font-size: 24px;
+   line-height: 150%;
+   letter-spacing: 0.02em;
+   color: #030305;
+   padding: 15px 0 17px 0;
+}
+
+.car-item-info {
+   display: flex;
+   justify-content: center;
+   align-items: center;
+}
+
+.car-item-point {
+   width: 110px;
+   height: 92px;
+   margin: 0 7.5px;
+}
+
+.car-item-point img {
+   margin-bottom: 11px;
+}
+
+.car-item-action {
+   margin-top: 13px;
+}
+
+.car-item-action .button {
+   width: 100%;
+   padding: 15px;
+   height: 54px;
+}
+
+/*Делаем второй div в классе .car-item-point с жирным начертанием*/
+.car-item-point >div:nth-child(2) {
+   font-weight: bold;
+}
