--- a/styles/styles.css
+++ b/styles/styles.css
@@ -107,8 +107,17 @@ body {
 
 .button:hover {
    cursor: pointer;
-   background: #575757;
+   animation-name: background-color;
+   animation-duration: 1s;
+   animation-fill-mode: forwards;
 }
+
+@keyframes background-color {
+   100% {
+      background-color: #575757;
+   }
+}
+
 /*Вопрос по целесообразности применения padding,а не margin*/
 .car {
    padding: 100px 0;
@@ -126,7 +135,6 @@ body {
    flex-wrap: wrap;
    justify-content: space-between;
    align-items: center;
-   /*margin-top: 110px;*/
 }
 
 .car-item {
@@ -135,8 +143,13 @@ body {
    margin-top: 40px;
 }
 
-.car-item-image {
+.car-item-image img {
    vertical-align: bottom;
+   transition: all .7s;
+}
+
+.car-item-image:hover img {
+   transform: scale(1.1);
 }
 
 .car-item-title {
